@@ -1,0 +1,33 @@
+121,184,81
+243,194,55
+164,174,196
+1547,357
+1698,362
+1873,363
+2020,357
+2196,358
+1529,521
+1737,519
+1952,513
+2108,525
+2241,520
+1581,674
+1706,673
+1881,675
+2072,668
+2191,683
+1602,832
+1729,834
+1869,829
+2025,832
+2178,839
+1573,983
+1745,988
+1879,992
+2029,993
+2204,990
+1620,1147
+1748,1142
+1891,1148
+2032,1147
+2169,1146
